<resources>
    <string name="app_name">ЕВ-1</string>
    <string name="action_calibration">Калібрування</string>
    <string name="action_help">Правила вимiрювання висоти</string>
    <string name="angle_str">Вертикальний кут</string>
    <string name="dialog_title">Висота до рiвня очей, м</string>
    <string name="dial_str1">Справжня відстань до дерева, м</string>
    <string name="dial_str2">Справжня висота дерева, м</string>
    <string name="togle1_str">Базисна вiдстань 20 м</string>
    <string name="togle2_str">Базисна вiдстань 30 м</string>
    <string name="line1">НВПП \"КАРО\" м.Харкiв </string>
    <string name="line2">сайт \"Все для лiсiвника\"</string>
    <string name="line3"> <u>lesovod.com.ua</u></string>
    <string name="line4">тел.<u>0572-94-96-42</u></string>
    <string name="line5"><u>050-400-83-41</u></string>
    <string name="line6"><u>097-529-67-78</u></string>

    <string name="calc_help1">1. Ввести висоту до рiвня очей.</string>
    <string name="calc_help2">2. Вибрати необхiдну базисну вiдстань, або ввести будь-яку реальну вiдстань
        до дерева, висоту якого треба визначити.</string>
    <string name="calc_help3">3. Вимірювання висоти проводити так, щоб стрілка на екрані вказувала на вершину дерева.
        Візирування на вершину слід проводити по верхній кромці мобільного пристрою, твердо тримаючи його лівою рукою та затамувавши подих, щоб виключити тремтіння руки.</string>
    <string name="calc_help4">4. Натиснути на будь-яку точку екрану пристрою, правою рукою дуже обережно.
    В результаті отримаєм значення виміру висоти на екрані.</string>
    <string name="calc_help5">5. Звуковий сигнал підтверджує завершення вимірювання.</string>
    <string name="calib_help1">1. У правому верхньому кутку екрана вибрати пункт меню
        \"Калiбрування\" та натиснути на нього.</string>
    <string name="calib_help2">2. Шоб ввести поправку на висоту, треба натиснути на кнопку
        \"Додати вимірювання\" та виконати вимiрювання висоти. </string>
    <string name="calib_help3">3. Якщо з метою калібрування проведено більше ніж одне вимірювання, то програма розраховує середньозважену поправку з усіх вимірювань.</string>
    <string name="calib_help4">4. Для завершення калібрування слід натиснути кнопку  \"Завершити калібрування\".</string>
    <string name="calib_help5">5. Щоб прибрати внесену поправку на висоту, треба натиснути на
        кнопку - \"Вiдмiнити поправку\".</string>
    <string name="owv_distanse">Власне значення відстані, м</string>
    <string name="get_distanse">Виміряти висоту</string>
    <string name="change_data">Змінити дані</string>
    <string name="measured_hieght">Виміряна висота</string>
    <string name="real_hieght">Істинна висота</string>
    <string name="avarage_mistake">Середньозважена поправка</string>
    <string name="finish_calibration">Завершити калібрування</string>
    <string name="mesuare_height">Вимірювання висоти</string>
    <string name="meter">М</string>
    <string name="mistake">Похибка</string>
    <string name="test_data">Тестові данні</string>
    <string name="title_count">Кiлькiсть вимiрювань</string>


</resources>
